typescript/checker/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement10.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement10.ts:2:17
  |
2 | for (const v of X) {
  |                 ^

